LevelCheck-Completed
- Change level by level
- Bullets appear in the center of the player
- Score and number of enemies
- Remove bullets at the end of the level